Emp list alignment fix

--- a/MobileApp/www/css/style.css
+++ b/MobileApp/www/css/style.css
@@ -502,6 +502,11 @@ table tr
    text-transform: capitalize !important;
    font-weight: normal !important;
 }
+span.EmpNameTxt
+{
+   line-height: 33px;
+   text-transform: capitalize;
+}
 .padding10
 {
   padding: 10px;
